src/rabbit/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit
spec:
  type: ClusterIP
  selector:
    app: rabbit
  ports:
    - name: http
      protocol: TCP
      port: 5672
      targetPort: 5672
    - name: amqp
      protocol: TCP
      port: 15672
      targetPort: 15672
